<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="?attr/colorSurface">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/appBar">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            app:title="@string/settings"
            app:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:navigationIcon="@drawable/ic_back"
            android:id="@+id/toolbar">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginBottom="12dp"
                android:textAppearance="?attr/textAppearanceTitleSmall"
                android:textAllCaps="false"
                android:textColor="?attr/colorPrimary"
                android:layout_marginStart="4dp"
                android:text="@string/language" />

            <LinearLayout
                android:id="@+id/btnLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingVertical="12dp"
                android:paddingHorizontal="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCurrentLang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:textAppearance="?attr/textAppearanceBodySmall"
                    android:text="Indonesia" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="24dp"
                android:background="?@attr/colorOutline"
                android:alpha="0.2" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginBottom="12dp"
                android:textAppearance="?attr/textAppearanceTitleSmall"
                android:textAllCaps="false"
                android:textColor="?attr/colorPrimary"
                android:layout_marginStart="4dp"
                android:text="@string/appearance" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:paddingVertical="12dp"
                android:orientation="vertical"
                android:paddingHorizontal="4dp"
                android:focusable="true"
                android:id="@+id/btnDarkTheme">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:text="@string/dark_theme"
                    android:textStyle="bold" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:alpha="0.7"
                    android:textAppearance="?attr/textAppearanceBodySmall"
                    android:id="@+id/txtCurrentTheme"
                    android:text="Follow system" />

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:paddingVertical="12dp"
                android:orientation="horizontal"
                android:paddingHorizontal="4dp"
                android:id="@+id/layoutBlackMode">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:text="@string/black_mode"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:alpha="0.7"
                        android:textAppearance="?attr/textAppearanceBodySmall"
                        android:text="@string/black_mode_desc" />

                </LinearLayout>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/switchBlackMode" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
